Mais um certificado

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 
                 <div class="header-right">
                     <a href="https://migueleaferreira.github.io/Meu_Portfolio/" class="header-link">📂 Portfólio</a>
-                    <a href="https://www.linkedin.com/in/miguel-expedito-2aa2a9164/" target="_blank" class="header-link">🔗 LinkedIn</a>
+                    <a href="https://www.linkedin.com/in/miguel-expedito-2aa2a9164/" target="_blank"
+                        class="header-link">🔗 LinkedIn</a>
                     <a href="https://github.com/migueleaferreira" target="_blank" class="header-link">💻 GitHub</a>
                 </div>
             </div>
@@ -46,11 +47,23 @@
             </div>
 
             <div class="card">
-                <img src="imagens/coursera_askquestion.PNG" alt="Certificado Coursera Ask Questions to Make Data-Driven Decisions">
+                <img src="imagens/fiap_python_development.png" alt="Certificado FIAP Python Development">
+                <div class="card-content">
+                    <h2>Python Development (Nano Course)</h2>
+                    <p><strong>Instituição:</strong> FIAP</p>
+                    <p>Nano Course com carga horária de 80 horas sobre desenvolvimento em Python.</p>
+                    <a href="https://on.fiap.com.br/validar-certificado/" target="_blank">Validar certificado</a>
+                </div>
+            </div>
+
+            <div class="card">
+                <img src="imagens/coursera_askquestion.PNG"
+                    alt="Certificado Coursera Ask Questions to Make Data-Driven Decisions">
                 <div class="card-content">
                     <h2>Ask Questions to Make Data-Driven Decisions</h2>
                     <p><strong>Instituição:</strong> Google / Coursera</p>
-                    <p>Curso on-line sem créditos focado em tomar decisões orientadas por dados (Programa de cursos integrados).</p>
+                    <p>Curso on-line sem créditos focado em tomar decisões orientadas por dados (Programa de cursos
+                        integrados).</p>
                     <a href="https://coursera.org/verify/CKXJQFMCKVF6" target="_blank">Ver certificado</a>
                 </div>
             </div>
@@ -58,7 +71,7 @@
             <div class="card">
                 <img src="imagens/fiap_bi.png" alt="Certificado BI FIAP">
                 <div class="card-content">
-                    <h2>Business Intelligence (BI)</h2>
+                    <h2>Business Intelligence (BI, Nano Course)</h2>
                     <p><strong>Instituição:</strong> FIAP</p>
                     <p>Curso voltado à criação de dashboards e visualização de dados no Power BI.</p>
                     <a href="#" target="_blank">Ver certificado</a>
@@ -78,9 +91,10 @@
             <div class="card">
                 <img src="imagens/fiap_python.PNG" alt="Certificado Python Fiap">
                 <div class="card-content">
-                    <h2>Python Development (Nano Course)</h2>
+                    <h2>Python (Nano Course)</h2>
                     <p><strong>Instituição:</strong> Fiap</p>
-                    <p>Aborda os fundamentos da linguagem Python, essenciais para desenvolvimento, análise de dados e automação de processos. (Carga horária de 80 horas)</p>
+                    <p>Aborda os fundamentos da linguagem Python, essenciais para desenvolvimento, análise de dados e
+                        automação de processos. (Carga horária de 80 horas)</p>
                     <a href="#" target="_blank">Ver certificado</a>
                 </div>
             </div>
